# splitwise-mcp-server

./: .env.example  README.md  main.py  main1.py  main2.py  pyproject.toml  requirements.txt
