[project]
name = "splitwise-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.4",
    "fastmcp>=2.14.4",
    "py-key-value-aio[redis]>=0.3.0",
    "python-dotenv>=1.2.1",
    "splitwise>=3.0.0",
]
